# OpenGL_Start

./: CMakeLists.txt  main.cpp  utils.cpp
homeworks/hw01/: interpolation.cpp  triangles.cpp
homeworks/hw03/animated_square/: main.cpp
homeworks/hw03/animated_square/res/shaders/: rect.vert
homeworks/hw03/textured_rectangles/: main.cpp
homeworks/hw04/: main.cpp
homeworks/hw05/: main.cpp
homeworks/hw05/res/shaders/: border.frag  cube.frag  cube.vert
src/: main.cpp
src/lesson01/: triangle.vert
src/lesson02/: main.cpp  shader_utils.cpp  shader_utils.h
